--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -15,9 +15,7 @@ AM_CPPFLAGS = \
 	-DPACKAGE_LOCALE_DIR=\""$(localedir)"\" \
 	-DPACKAGE_SRC_DIR=\""$(srcdir)"\" \
 	-DPACKAGE_DATA_DIR=\""$(pkgdatadir)"\" \
-	$(GROWBOOK_CFLAGS) \
-	$(PGSQL_CFLAGS) \
- 	$(MARIADB_CFLAGS)
+	$(GROWBOOK_CFLAGS) 
 
 AM_CFLAGS =\
 	 -Wall\
@@ -85,7 +83,7 @@ growbook_SOURCES = \
 
 growbook_LDFLAGS = 
 
-growbook_LDADD = $(GROWBOOK_LIBS) $(PGSQL_LIBS) $(MARIADB_LIBS)
+growbook_LDADD = $(GROWBOOK_LIBS)
 
 
 if NATIVE_WIN32
