--- a/config.h.in
+++ b/config.h.in
@@ -32,7 +32,7 @@
 /* Define if your <locale.h> file defines LC_MESSAGES. */
 #undef HAVE_LC_MESSAGES
 
-/* define 1 if we have libpq (PostgreSQL) installed. */
+/* define 1 if we have libpq installed */
 #undef HAVE_LIBPQ
 
 /* Define to 1 if you have the `sqlite3' library (-lsqlite3). */
@@ -41,7 +41,8 @@
 /* Define to 1 if you have the <locale.h> header file. */
 #undef HAVE_LOCALE_H
 
-/* define 1 if we have MariaDB client installed. */
+/* define 1 if we have MariaDB client installed DEPENDS="$DEPENDS libmariadb"
+   */
 #undef HAVE_MARIADB
 
 /* define 1 if we have sqlite3 */
@@ -70,9 +71,6 @@
 
 /* Define to 1 if you have the <unistd.h> header file. */
 #undef HAVE_UNISTD_H
-
-/* Define if running the test suite so that test #27 works on MinGW. */
-#undef LT_MINGW_STATIC_TESTSUITE_HACK
 
 /* Define to the sub-directory where libtool stores uninstalled libraries. */
 #undef LT_OBJDIR
